<resources>
    <string name="app_name">Bike Coach</string>
    <string name="title_activity_display">Dashboard</string>

    <string name="action_disconnect">Disconnect</string>
    <string name="title_activity_main">Bike Speed Monitor</string>
    <string name="title_connecting">Connecting</string>
    <string name="title_reconnect_attempt">Reconnecting</string>
    <string name="message_wait">Please Wait</string>
    <string name="speed_target_label">Speed Target</string>
    <string name="speed_target_value_default">-</string>



    <string name="button_activity_control">START</string>
    <string name="stop_button">STOP</string>
    <string name="todo">Todo</string>
    <string name="current_speed">Current Speed</string>
    <string name="temperature">Temperature</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="summary">SUMMARY</string>
    <string name="pause">PAUSE</string>
    <string name="total_distance">Total Distance</string>
    <string name="totaltime">TotalTime</string>
    <string name="avg_speed">Avg. Speed</string>
    <string name="good_job">Good Job!</string>
    <string name="test">test</string>

    <string name="target_speed">Target Speed</string>
    <string name="celsius">%1s C</string>
    <string name="current_speed_value">%1s m/s</string>
    <string name="current_distance_value">%1s m</string>
    <string name="average_speed">Avg Speed: %1s m/s</string>
    <string name="endAvg_speed">%1s m/s</string>
    <string name="max_speed">Max Speed: %1s m/s</string>


</resources>
