<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/summaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/summary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalDistanceTextView"
        android:layout_width="131dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/total_distance"
        app:layout_constraintEnd_toStartOf="@+id/totalDistanceValue"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bravoTextView" />

    <TextView
        android:id="@+id/totalTimeTextView"
        android:layout_width="131dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/totaltime"
        app:layout_constraintBottom_toBottomOf="@+id/totalTimeValue"
        app:layout_constraintEnd_toStartOf="@+id/totalTimeValue"
        app:layout_constraintHorizontal_bias="0.316"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/totalTimeValue"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/avgSpeedTextView"
        android:layout_width="134dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/avg_speed"
        app:layout_constraintBottom_toBottomOf="@+id/avgSpeedValue"
        app:layout_constraintEnd_toStartOf="@+id/avgSpeedValue"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalTimeTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/bravoTextView"
        android:layout_width="321dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/good_job"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summaryTextView" />

    <TextView
        android:id="@+id/totalDistanceValue"
        android:layout_width="136dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:text="@string/test"
        app:layout_constraintBottom_toBottomOf="@+id/totalDistanceTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/totalTimeValue"
        android:layout_width="131dp"
        android:layout_height="26dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalDistanceValue" />

    <TextView
        android:id="@+id/avgSpeedValue"
        android:layout_width="137dp"
        android:layout_height="29dp"
        android:layout_marginEnd="16dp"

        android:layout_marginTop="8dp"
        android:text="@string/test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalTimeValue" />

    <TextView
        android:id="@+id/sppedTargetTextView"
        android:layout_width="129dp"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/target_speed"
        app:layout_constraintBottom_toBottomOf="@+id/speedTargetValue"
        app:layout_constraintEnd_toStartOf="@+id/speedTargetValue"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/speedTargetValue"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/speedTargetValue"
        android:layout_width="122dp"
        android:layout_height="27dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avgSpeedValue" />

</android.support.constraint.ConstraintLayout>